// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Headings Section Title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <h2
      class="Text-sc-1wu7vpu-0-h2 iNwjDZ"
      font-size="26px"
      font-weight="500"
    >
      Section Title
    </h2>
  </div>
</div>
`;

exports[`Storyshots Headings Subsection Title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <h3
      class="Text-sc-1wu7vpu-0-h3 Headings__SubsectionTitle-igpciy-0 gjtGVH"
      font-size="20px"
      font-weight="500"
    >
      SubsectionTitle
    </h3>
  </div>
</div>
`;

exports[`Storyshots Headings Title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <h1
      class="Text-sc-1wu7vpu-0-h1 hfLeOn"
      font-size="46px"
      font-weight="300"
    >
      Title
    </h1>
  </div>
</div>
`;

exports[`Storyshots Headings With a custom margin 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <h1
      class="Text-sc-1wu7vpu-0-h1 dYSAlr"
      font-size="46px"
      font-weight="300"
    >
      Title
    </h1>
    <p
      class="Text-sc-1wu7vpu-0 jRzHjr"
      color="currentColor"
      font-size="16px"
    >
      Lorem ipsum
    </p>
  </div>
</div>
`;
